Fix layout issue where logout button would be too low
And hence look weird

--- a/modules/yellowbrick-admin/src/main/resources/static/css/application.scss
+++ b/modules/yellowbrick-admin/src/main/resources/static/css/application.scss
@@ -34,6 +34,8 @@ a, a:active, a:hover, a:visited {
   height: 100%;
   width: $side-menu-width;
   background-color: $bg-color;
+  max-height: 600px;
+  position: relative;
   float: left;
 
   ul {
